Gallery initial commit

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 131 – Dynamic Web Fundamentals - Trevor Ngwenya</title>
+    <title>WDD 131 - Dynamic Web Fundamentals - Trevor Ngwenya</title>
     <meta
       name="description"
-      content="This is the course home page for the WDD 131 – Dynamic Web Fundamentals course assignment portal page by Trevor Ngwenya"
+      content="This is the course home page for the WDD 131 - Dynamic Web Fundamentals course assignment portal page by Trevor Ngwenya"
     />
     <meta name="author" content="Trevor Ngwenya" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
