Add static images

--- a/temples.html
+++ b/temples.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WDD 131 - Dynamic Web Fundamentals - Trevor Ngwenya</title>
+    <title>WDD 131 - Week02 Activity - Temple Album</title>
     <meta
       name="description"
-      content="This is the course home page for the WDD 131 - Dynamic Web Fundamentals course assignment portal page by Trevor Ngwenya"
+      content="WDD 131 - This is the Dynamic Web Fundamentals course Temple Album assignment for week02"
     />
     <meta name="author" content="Trevor Ngwenya" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -40,7 +40,76 @@
     <main>
         <h2>Home</h2>
       <section class="gallery">        
-            <div id="temples" class="temples"></div>
+            <div id="temples" class="temples">
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+              <figure>
+                <img src="images/mexico-city-temple.jpeg" alt=""/>
+                <figcaption>Mexico City Temple</figcaption>
+              </figure>
+            </div>
       </section>
     </main>
 
