--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -27,12 +27,12 @@
         <nav class="navigation">
         <ul>
             <li>
-                <a href="https://www.linkedin.com/in/trevorngwenya/">Home</a>
+                <a href="filtered-temples.html">Home</a>
             </li>
-            <li><a href="https://byupw.instructure.com/" class="active">Old</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/study/scriptures/bofm/1-ne/3?lang=eng&id=p7#p7">New</a></li>
-            <li><a href="#">Large</a></li>
-            <li><a href="#">Small</a></li>        
+            <li id="oldTemples"><a href="#" class="active">Old</a></li>
+            <li id="newTemples"><a href="#">New</a></li>
+            <li id="largeTemples"><a href="#">Large</a></li>
+            <li id="smallTemples"><a href="#">Small</a></li>        
         </ul>
         </nav>
     </header>
