--- a/form.html
+++ b/form.html
@@ -79,7 +79,7 @@
       <input type="text" id="username" name="username" />
 
       <!-- Submit -->
-      <input type="submit" value="Submit Review" />
+      <input type="submit" value="Submit"/>
     </form>
   </main>
 
