Update meta data

--- a/movie-space/genre.html
+++ b/movie-space/genre.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Movie Space | Trevor Ngwenya WDD 231</title>
-  <meta name="description" content="This is the Movie Space Home page for the WDD 231 by Trevor Ngwenya">
+  <title>Movie Space | Trevor Ngwenya WDD 131</title>
+  <meta name="description" content="This is the Movie Space Home page for the WDD 131 by Trevor Ngwenya">
   <meta name="author" content="Trevor Ngwenya">
-  <meta property="og:title" content="Trevor Ngwenya - Movie Space Home page - WDD 231 - Web Frontend Development">
+  <meta property="og:title" content="Trevor Ngwenya - Movie Space Home page - WDD 131">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://votre01.github.io/wdd231/movie-space/images/movie-space-small.webp">
-  <meta property="og:url" content="https://votre01.github.io/wdd231/movie-space">
+  <meta property="og:image" content="https://votre01.github.io/wdd131/movie-space/images/movie-space-small.webp">
+  <meta property="og:url" content="https://votre01.github.io/wdd131/movie-space">
   <link rel="icon" href="images/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
   <link rel="stylesheet" href="styles/styles.css">
